--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="project-card" data-category="web">
                     <div class="project-img">
                         <img src="https://plus.unsplash.com/premium_photo-1720588846590-0a634175efe7?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -482,8 +482,8 @@
                             <span>MYSQL</span>
                             <span>TailwindCSS</span>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
                 <div class="project-card" data-category="api">
                     <div class="project-img">
                         <img src="https://images.unsplash.com/photo-1581472723648-909f4851d4ae?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=400&q=80"
@@ -507,7 +507,7 @@
                 </div>
 
 
-                <div class="project-card" data-category="web">
+                <!-- <div class="project-card" data-category="web">
                     <div class="project-img">
                         <img src="https://images.unsplash.com/photo-1557264305-7e2764da873b?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=400&q=80"
                             alt="Database Service">
@@ -526,9 +526,9 @@
                             <span>Elasticsearch</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="project-card" data-category="micro">
+                <!-- <div class="project-card" data-category="micro">
                     <div class="project-img">
                         <img src="https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=400&q=80"
                             alt="Cloud Application">
@@ -547,7 +547,7 @@
                             <span>PostgreSQL</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="project-card" data-category="api">
                     <div class="project-img">
@@ -571,7 +571,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="web">
+                <!-- <div class="project-card" data-category="web">
                     <div class="project-img">
                         <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=400&q=80"
                             alt="Content Management System">
@@ -590,7 +590,7 @@
                             <span>GraphQL</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -605,7 +605,7 @@
             </div>
 
             <div class="blog-grid">
-                <div class="blog-card">
+                <!-- <div class="blog-card">
                     <div class="blog-img">
                         <img src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&h=400&q=80"
                             alt="Spring Boot article">
@@ -627,7 +627,7 @@
                         </div>
                         <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="blog-card">
                     <div class="blog-img">
@@ -718,7 +718,7 @@
                                 <i class="fas fa-phone-alt"></i>
                             </div>
                             <h3>Phone</h3>
-                            <p>+91-6371307078</p>
+                            <p>+91-9937993918</p>
                             <p>+91-6371307078</p>
                         </div>
 
