--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Add favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -359,8 +360,9 @@
                 </div>
 
                 <div class="download-resume">
-                    <a target="_blank" href="https://drive.google.com/uc?export=download&id=1ATpXnsAOxbOUwXpx-1CMMhU3ynQI8bXb
-                    " class="btn primary-btn">Download CV <i class="fas fa-download" download></i></a>
+                    <a target="_blank"
+                        href="https://drive.google.com/uc?export=download&id=16iKJLl0AqbOjc1edEhqtRPWtWkoJ6xiJ"
+                        class="btn primary-btn">Download CV <i class="fas fa-download" download></i></a>
                 </div>
             </div>
         </div>
@@ -823,7 +825,7 @@
 
     <!-- Include EmailJS SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
         integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
