--- a/index.html
+++ b/index.html
@@ -166,16 +166,6 @@
                     <div class="skill-item">
                         <div class="skill-info">
                             <p>Java</p>
-                            <p class="percent">95%</p>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="95"></div>
-                        </div>
-                    </div>
-
-                    <div class="skill-item">
-                        <div class="skill-info">
-                            <p>Spring Boot</p>
                             <p class="percent">90%</p>
                         </div>
                         <div class="skill-bar">
@@ -185,27 +175,7 @@
 
                     <div class="skill-item">
                         <div class="skill-info">
-                            <p>RESTful APIs</p>
-                            <p class="percent">88%</p>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="88"></div>
-                        </div>
-                    </div>
-
-                    <div class="skill-item">
-                        <div class="skill-info">
-                            <p>SQL & Databases</p>
-                            <p class="percent">85%</p>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="85"></div>
-                        </div>
-                    </div>
-
-                    <div class="skill-item">
-                        <div class="skill-info">
-                            <p>Microservices</p>
+                            <p>Spring Boot</p>
                             <p class="percent">80%</p>
                         </div>
                         <div class="skill-bar">
@@ -215,15 +185,45 @@
 
                     <div class="skill-item">
                         <div class="skill-info">
-                            <p>Docker</p>
-                            <p class="percent">78%</p>
+                            <p>RESTful APIs</p>
+                            <p class="percent">80%</p>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" data-width="78"></div>
+                            <div class="skill-progress" data-width="80"></div>
                         </div>
                     </div>
 
                     <div class="skill-item">
+                        <div class="skill-info">
+                            <p>SQL & Databases</p>
+                            <p class="percent">80%</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" data-width="80"></div>
+                        </div>
+                    </div>
+
+                    <div class="skill-item">
+                        <div class="skill-info">
+                            <p>Microservices</p>
+                            <p class="percent">50%</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" data-width="50"></div>
+                        </div>
+                    </div>
+
+<!--                     <div class="skill-item">
+                        <div class="skill-info">
+                            <p>Docker</p>
+                            <p class="percent">50%</p>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-progress" data-width="50"></div>
+                        </div>
+                    </div> -->
+
+<!--                     <div class="skill-item">
                         <div class="skill-info">
                             <p>Kubernetes</p>
                             <p class="percent">70%</p>
@@ -231,8 +231,8 @@
                         <div class="skill-bar">
                             <div class="skill-progress" data-width="70"></div>
                         </div>
-                    </div>
-
+                    </div> -->
+<!-- 
                     <div class="skill-item">
                         <div class="skill-info">
                             <p>AWS</p>
@@ -241,7 +241,7 @@
                         <div class="skill-bar">
                             <div class="skill-progress" data-width="75"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
